--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "react-icons": "^4.10.1",
     "react-router-dom": "^6.14.1",
     "react-scripts": "5.0.1",
+    "react-scroll": "^1.8.9",
     "react-scroll-progress-bar": "^1.1.13",
     "react-spring": "^9.7.2",
     "react-typed": "^1.2.0",
